src/test/ui/rfc-2005-default-binding-mode/issue-44912-or.stderr
error[E0409]: variable `x` is bound in inconsistent ways within the same match arm
  --> $DIR/issue-44912-or.rs:6:35
   |
LL |         Some((x, 3)) | &Some((ref x, 5)) => x,
   |               - first binding     ^ bound in different ways

error: aborting due to previous error

For more information about this error, try `rustc --explain E0409`.
